Version 1.3
(??? from https://github.com/brettp/anypage)
  * Added live path checking.
  * Cleaned up some language strings.
  * 

Version 1.2
(May 14, 2012 from https://github.com/brettp/anypage)
  * Fixed WSOD when creating a new page.
  * Removed activate on install because it was breaking Elgg install.

Version 1.1
(May 6th, 2012 from https://github.com/brettp/anypage)

 Enhancements:
  * Can specify pages require a login or are visible through walled gardens.
  * Can register a conflicting page handler.
  * CSS improvements for warning message.

Version 1.0
(May 3rd, 2012 from https://github.com/brettp/anypage)

 Initial release.