@@ -9,6 +9,7 @@ $description = get_input('description', null, false);
 $use_view = get_input('use_view');
 $visible_through_walled_garden = get_input('visible_through_walled_garden', false);
 $requires_login = get_input('requires_login', false);
+$show_in_footer = get_input('show_in_footer', false);
 $guid = get_input('guid');
 
 elgg_make_sticky_form('anypage');
@@ -46,6 +47,7 @@ $page->description = $description;
 $page->setUseView($use_view);
 $page->setRequiresLogin($requires_login);
 $page->setVisibleThroughWalledGarden($visible_through_walled_garden);
+$page->setShowInFooter($show_in_footer);
 
 if ($page->save()) {
 	elgg_clear_sticky_form('anypage');
