@@ -9,6 +9,7 @@ $view_info_class = $use_view ? '' : 'class="hidden"';
 $use_view_checked = $use_view ? 'checked="checked"' : '';
 $visible_check = $visible_through_walled_garden ? 'checked="checked"' : '';
 $requires_login_check = $requires_login ? 'checked="checked"' : '';
+$show_in_footer_check = $show_in_footer ? 'checked="checked"' : '';
 
 ?>
 <div>
@@ -49,25 +50,34 @@ $requires_login_check = $requires_login ? 'checked="checked"' : '';
 <div>
 	<label>
 <?php if (elgg_get_config('walled_garden')) { ?>
+		<input type="checkbox" name="visible_through_walled_garden" value="1" <?php echo $visible_check; ?> />
 		<?php
 			echo elgg_echo('anypage:visible_through_walled_garden');
 		?>
-		<input type="checkbox" name="visible_through_walled_garden" value="1" <?php echo $visible_check; ?> />
 <?php } else { ?>
+		<input type="checkbox" name="requires_login" value="1" <?php echo $requires_login_check; ?> />
 		<?php
 			echo elgg_echo('anypage:requires_login');
 		?>
-		<input type="checkbox" name="requires_login" value="1" <?php echo $requires_login_check; ?> />
 <?php } ?>
 	</label>
 </div>
 
 <div>
 	<label>
+	<input type="checkbox" name="show_in_footer" value="1" <?php echo $show_in_footer_check; ?> />
+	<?php
+		echo elgg_echo('anypage:show_in_footer');
+	?>
+	</label>
+</div>
+
+<div>
+	<label>
+	<input type="checkbox" id="anypage-use-view" name="use_view" value="1" <?php echo $use_view_checked; ?> />
 	<?php
 		echo elgg_echo('anypage:use_view');
 	?>
-	<input type="checkbox" id="anypage-use-view" name="use_view" value="1" <?php echo $use_view_checked; ?> />
 	</label>
 </div>
 
